pkl-core/src/test/files/LanguageSnippetTests/input/errors/invalidClassMethodModifier.pkl
class Foo {
  open function foo() = 42
}

res1 = Foo {}